마크다운 적용

--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "start": "node server.js"
   },
   "keywords": [],
-  "author": "jaeone",
+  "author": "jaeone22",
   "description": "Easy Blog Software",
   "dependencies": {
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "marked": "^16.1.1"
   }
 }
