--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
 ADMIN_PASSWORD=PASSWORD
 
+HCAPTCHA_SITE_KEY=YOUR_SITE_KEY_(LEAVE_BLANK_IF_NOT_USED)
+HCAPTCHA_SECRET_KEY=YOUR_SECRET_KEY_(LEAVE_BLANK_IF_NOT_USED)
+
 ML_BLOG_NAME=MyLogs
 ML_USER_NAME=User
 ML_BLOG_URL=https://example.com
