--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "hcaptcha": "^0.2.0",
     "marked": "^16.1.1"
   }
 }
